force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/GLScheduler__Scheduled_Report_Operations_Log__c.object-meta.xml
<CustomObject>
    <description>When deployed as a managed package then users cannot see errors logged to the Debug Log. This object stores any errors and messages the Adminsitrator may need to know about when troubleshooting issues. You may delete these records after you have reviewed them.</description>
    <label>Scheduled Report Log</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Report Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>