force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/fields/GLScheduler__Detail__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Detail__c</fullName>
    <label>Detail</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>