force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/fields/GLScheduler__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Job_ID__c</fullName>
    <description>The Batchable or Queueable Job ID when this error occurred.</description>
    <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>