force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/fields/GLScheduler__Log_Time__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Log_Time__c</fullName>
    <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the &quot;date&quot; portion and not the &quot;time&quot;. This formula field is workaround to to view the &quot;date&quot; and &quot;time&quot; together.</description>
    <formula>CreatedDate</formula>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>