force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/fields/GLScheduler__Summary__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>