force-app/main/default/objects/GLScheduler__Scheduled_Report_Operations_Log__c/listViews/GLScheduler__All.listView-meta.xml
<ListView>
    <fullName>GLScheduler__All</fullName>
    <columns>NAME</columns>
    <columns>GLScheduler__Summary__c</columns>
    <columns>GLScheduler__Detail__c</columns>
    <columns>GLScheduler__Log_Time__c</columns>
    <columns>GLScheduler__Job_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>